--- a/YazeedPortfolio/css/style.css
+++ b/YazeedPortfolio/css/style.css
@@ -455,3 +455,42 @@ header .header-content img {
     text-align: center;
 }
 /* footerEnd */
+
+
+/*  Tablet Responsive */
+
+@media(max-width: 768px){
+    #home .navbar nav {
+        display: block;
+        text-align: center;
+    }
+    #home .navbar nav ul a {
+        margin: 0 15px;
+    }
+    #home .header-content {
+        grid-template-columns: 1fr;
+    }
+    #home .header-content .content-text {
+        margin-top: 0rem;
+        margin-bottom: 5rem;
+    }
+    #home .header-content h1{
+        font-size: 50px;
+    }
+    header .header-content img {
+        max-width: 350px;
+        margin:auto;
+    }
+    #about .about-content,#contact .row {
+        grid-template-columns: 1fr;
+        row-gap: 3rem;
+
+    }
+    #skills .skills-content .row,#portfolio .row {
+        grid-template-columns: repeat(2,1fr) ;
+    }
+    #contact .row img {
+        max-width: 250px;
+        margin: auto;
+    }
+}
