--- a/YazeedPortfolio/css/style.css
+++ b/YazeedPortfolio/css/style.css
@@ -243,7 +243,7 @@ header .header-content img {
 
 #skills .skills-content .row .item{
     color: #fff;
-    background-color: #dd4814;
+    background-color: #09476e;
     font-size: 50px;
     margin: 20px;
     border-radius: 15px;
